fixing the overlapping scrolls and starting to add the date to the kanban orders table, not quite working as it should

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -10,6 +10,10 @@ body {
     color: #cc3300;
 }
 
+/*::-webkit-scrollbar-track {
+    background: transparent;
+}*/
+
 @layer utilities {
     .text-balance {
         text-wrap: balance;
